Migrate EtherHack to B42.20.2 original patcher model